Refactor RecordProcessorTest to improve event assertions and remove unused code